--- a/web/src/index.html
+++ b/web/src/index.html
@@ -25,7 +25,7 @@
                     label: 'My First dataset',
                     borderColor: 'rgb(255, 99, 132)',
                     backgroundColor: 'rgba(0, 0, 0, 0)',
-                    data: [0, 10, 5, 2, 20, 30, 45]
+                    data: [0, 10, 5, 2, 20, 30, 45, 34]
                 }]
             },
 
