--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,12 +7,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mqtt/4.2.6/mqtt.min.js" integrity="sha512-DD/bXhp28PWFubyhBKR7vt5FUMRCbEJ8KtC4Oq/MTWniMUytsPM5pFDaUTaHDRd7zC8cHpKvv6FaUI2OP/czlw==" crossorigin="anonymous"></script>
 </head>
 <body>
-
+<button onclick="addValue()">test</button>
 <canvas id="mainGraph">
-
+</canvas>
     <script>
 
-        mqtt.conn
         var ctx = document.getElementById('mainGraph').getContext('2d');
         var chart = new Chart(ctx, {
             // The type of chart we want to create
@@ -32,7 +31,12 @@
             // Configuration options go here
             options: {}
         });
+
+        function addValue(){
+            
+        }
+
     </script>
-</canvas>
+
 </body>
 </html>
