Affichage/masquage des graphes
Dans ce commit on retrouve la possibilité d'afficher ou masquage des graphes cochés

--- a/web/src/index - Jacques.html
+++ b/web/src/index - Jacques.html
@@ -32,7 +32,7 @@
             },
 
             // Configuration options go here
-            options: {
+            options: {/*
                 scales: {
                     xAxes: [{
                         type: 'time',
@@ -41,7 +41,7 @@
                         }
                     }]
                 }
-            }
+            */}
         });
 
         function addValue(value){
