--- a/web/src/websitedesign/index.html
+++ b/web/src/websitedesign/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Graphique temps réel</a>
 
-    <div id="navbarColor01" style="">
+    <div id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">Graphique différé</a>
@@ -51,6 +51,8 @@
                 <input type="checkbox" class="custom-control-input" id="customSwitch5" checked="">
                 <label class="custom-control-label" for="customSwitch5">Capteur #5</label>
             </div>
+
+
         </div>
     </div>
 
@@ -88,5 +90,6 @@
 
 
     <script src="graph.js"></script>
+
 </body>
 </html>
