--- a/web/extraitcode.html
+++ b/web/extraitcode.html
@@ -198,8 +198,6 @@
                         });
                     });
 
-
-
                         var csv = 'ID,TYPE,VALUE\n';
                         data.sort(function(a, b){return a[0] - b[0]});
                         data.forEach(function(row) {
@@ -214,6 +212,30 @@
                         hiddenElement.download = 'data.csv';
                         hiddenElement.click();
                     }
+
+
+
+                    //            <a href="#" id="btn_download_image" download="chart.pdf" target="_blank">Export image</a>
+                    document.getElementById('btn_download_image').addEventListener("click",function()
+                    {
+                        var canvas = document.getElementById('mainGraph')
+                        var dataURL = canvas.toDataURL('image/png');
+                        console.log(dataURL);
+
+                        this.href = dataURL
+                    });
+
+                    //<a href="#" id="btn_download_pdf" download="chart.pdf" target="_blank">Export pdf</a>
+                    //<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"><//script>
+                    document.getElementById('btn_download_pdf').addEventListener("click",function(){
+                    //create image from dumy canvas
+                        var canvas = document.getElementById('mainGraph')
+                        //creates PDF from img
+                        var doc = new jsPDF('landscape');
+                        doc.setFontSize(20);
+                        doc.addImage(canvas, 'JPEG', 10, 10, 280, 150 );
+                        doc.save('new-canvas.pdf');
+                    });
 
         </script>
         <button onclick="download_csv()">Download CSV</button> 
