Ajout de la classe, automatisation,
y'a un bug quand on coche puis décoche et qu'il envoie les données
Y'a un bug quand on coche puis déoche, parfois il décoche pas le bon

--- a/web/src/websitedesign/index.html
+++ b/web/src/websitedesign/index.html
@@ -81,14 +81,14 @@
 
 
 
-    <form>
+<!--     <form>
         <input type="checkbox" onchange="display('Temperature')" id="Temperature" name=""><label>Temperature</label>
         <input type="checkbox" onchange="display('Hauteur')" id="Hauteur" name=""><label>Hauteur</label>
         <input type="checkbox" onchange="display('Densité')" id="Densité" name=""><label>Densité</label>
         <input type="checkbox" onchange="display('Hauteur2')" id="Hauteur2" name=""><label>Hauteur2</label>
         <input type="checkbox" onchange="display('Densité2')" id="Densité2" name=""><label>Densité2</label>
     </form>
-
+ -->
 
 
     <script src="controler.js"></script>
