Ptn je suis trop fort

--- a/web/src/websitedesign/index.html
+++ b/web/src/websitedesign/index.html
@@ -64,15 +64,19 @@
             <th scope="col">
                 <div class="th-center">Max</div>
             </th>
+            <th scope="col">
+                <div class="th-center">Nombre de valeurs</div>
+            </th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>0.00</td>
+            <td id="label_moy">0</td>
+            <td id="label_var">0</td>
+            <td id="label_ecty">0</td>
+            <td id="label_min">0</td>
+            <td id="label_max">0</td>
+            <td id="label_quantity">0</td>
         </tr>
 
         </tbody>
@@ -95,5 +99,6 @@
     <script src="export.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
     <script src="graph.js"></script>
+    <script src="calcul.js"></script>
 </body>
 </html>
