--- a/web/src/websitedesign/index.html
+++ b/web/src/websitedesign/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Graphique temps réel</title>
     <script src="Chart.min.js"></script>
-    <script src="mqtt.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
 
