--- a/web/src/index.html
+++ b/web/src/index.html
@@ -95,7 +95,7 @@
  -->
 
 
-    <script src="controler.js"></script>
+    <script src="controller.js"></script>
     <script src="export.js"></script>
     <script src="jspdf.min.js"></script>
     <script src="graph.js"></script>
