--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Graphique temps réel</title>
     <script src="Chart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.js" type="text/javascript"></script>
+    <script src="paho-mqtt.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
 
@@ -105,7 +105,7 @@
  -->
 
 
-    <script src="controller.js"></script>
+    <script src="controler.js"></script>
     <script src="export.js"></script>
     <script src="jspdf.min.js"></script>
     <script src="graph.js"></script>
