--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="UTF-8">
     <title>Graphique temps réel</title>
-    <script src="Chart.min.js"></script>
-    <script src="paho-mqtt.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
-
+    <!-- CSS -->
+        <!-- CSS_Externe-->
+        <link rel="stylesheet" href="CSS_Externe/bootstrap.min.css">
+        <!-- CSS_Interne-->
+        <link rel="stylesheet" href="CSS_Interne/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Graphique temps réel</a>
+        <a class="navbar-brand" href="#">Graphique temps réel</a>
 
-    <div id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Graphique différé</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+        <div id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Graphique différé</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="flex-container">
         <div class="flex-child1">
@@ -33,7 +34,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Moyenne</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">24</h4>
+                            <h4 class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -42,7 +43,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Variance</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">1.2</h4>
+                            <h4 class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -51,7 +52,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Maximum</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">100</h4>
+                            <h4 class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -60,7 +61,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Minimum</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">0</h4>
+                            <h4 class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -69,7 +70,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Nombre de valeur</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">123</h4>
+                            <h4 class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -78,10 +79,7 @@
         </div>
         <div class="flex-child2">
             <div class="switchbuttons">
-                <!-- Rajouter des boutons ici si besoin -->
-
-                <!-- Fin des catégories mis à la main ici -->
-
+                
             </div>
 
             <div class="exportbuttons">
@@ -92,23 +90,16 @@
 
         </div>
     </div>
-
-
-
-<!--     <form>
-        <input type="checkbox" onchange="display('Temperature')" id="Temperature" name=""><label>Temperature</label>
-        <input type="checkbox" onchange="display('Hauteur')" id="Hauteur" name=""><label>Hauteur</label>
-        <input type="checkbox" onchange="display('Densité')" id="Densité" name=""><label>Densité</label>
-        <input type="checkbox" onchange="display('Hauteur2')" id="Hauteur2" name=""><label>Hauteur2</label>
-        <input type="checkbox" onchange="display('Densité2')" id="Densité2" name=""><label>Densité2</label>
-    </form>
- -->
-
-
-    <script src="controler.js"></script>
-    <script src="export.js"></script>
-    <script src="jspdf.min.js"></script>
-    <script src="graph.js"></script>
-    <script src="calcul.js"></script>
+    <!-- JS -->
+        <!-- JS_Externe -->
+        <script src="JS_Externe\Chart.min.js" type="text/javascript"></script>
+        <script src="JS_Externe\paho-mqtt.js" type="text/javascript"></script>
+        <script src="JS_Externe\jspdf.min.js" type="text/javascript"></script>
+        <!-- JS_Interne-->
+        <script src="JS_Interne\controler.js" type="text/javascript"></script>
+        <script src="JS_Interne\export.js" type="text/javascript"></script>
+        <script src="JS_Interne\graph.js" type="text/javascript"></script>
+        <script src="JS_Interne\calcul.js" type="text/javascript"></script>
+        <script src="JS_Interne\connexion.js" type="text/javascript"></script>
 </body>
 </html>
