--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Moyenne</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center"></h4>
+                            <h4 id="label_moy" class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Variance</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center"></h4>
+                            <h4 id="label_var"class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Maximum</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center"></h4>
+                            <h4 id="label_max" class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Minimum</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center"></h4>
+                            <h4 id="label_min" class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Nombre de valeur</div>
                         <div class="card-body">
-                            <h4 class="card-title text-center"></h4>
+                            <h4 id="label_quantity" class="card-title text-center"></h4>
                         </div>
                     </div>
                 </div>
@@ -96,10 +96,10 @@
         <script src="JS_Externe\paho-mqtt.js" type="text/javascript"></script>
         <script src="JS_Externe\jspdf.min.js" type="text/javascript"></script>
         <!-- JS_Interne-->
+        <script src="JS_Interne\calcul.js" type="text/javascript"></script>
         <script src="JS_Interne\controler.js" type="text/javascript"></script>
         <script src="JS_Interne\export.js" type="text/javascript"></script>
         <script src="JS_Interne\graph.js" type="text/javascript"></script>
-        <script src="JS_Interne\calcul.js" type="text/javascript"></script>
         <script src="JS_Interne\connexion.js" type="text/javascript"></script>
 </body>
 </html>
