Ajout du Zoom + Connexion des valeurs vidés

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         <script src="JS_Externe\Chart.min.js" type="text/javascript"></script>
         <script src="JS_Externe\paho-mqtt.js" type="text/javascript"></script>
         <script src="JS_Externe\jspdf.min.js" type="text/javascript"></script>
+        <script src="JS_Externe\chartjs-plugin-zoom.min.js" type="text/javascript"></script>
+        <script src="JS_Externe\hammer.min.js" type="text/javascript"></script>
         <!-- JS_Interne-->
         <script src="JS_Interne\calcul.js" type="text/javascript"></script>
         <script src="JS_Interne\controler.js" type="text/javascript"></script>
