--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
     <div class="flex-container">
         <div class="flex-child1">
+
+            <button id="resetbtn">
+                Reset Zoom
+            </button>
             <div class="chart">
                 <canvas id="mainGraph"></canvas>
             </div>
