--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Graphique différé</a>
+                    <a class="nav-link" href="#">Raspberry</a>
                 </li>
             </ul>
         </div>
@@ -25,10 +25,6 @@
 
     <div class="flex-container">
         <div class="flex-child1">
-
-            <button id="resetbtn">
-                Reset Zoom
-            </button>
             <div class="chart">
                 <canvas id="mainGraph"></canvas>
             </div>
@@ -38,7 +34,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Moyenne</div>
                         <div class="card-body">
-                            <h4 id="label_moy" class="card-title text-center"></h4>
+                            <h4 id="label_moy" class="card-title text-center">&#8203;</h4>
                         </div>
                     </div>
                 </div>
@@ -47,7 +43,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Variance</div>
                         <div class="card-body">
-                            <h4 id="label_var"class="card-title text-center"></h4>
+                            <h4 id="label_var"class="card-title text-center">&#8203;</h4>
                         </div>
                     </div>
                 </div>
@@ -56,7 +52,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Maximum</div>
                         <div class="card-body">
-                            <h4 id="label_max" class="card-title text-center"></h4>
+                            <h4 id="label_max" class="card-title text-center">&#8203;</h4>
                         </div>
                     </div>
                 </div>
@@ -65,7 +61,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Minimum</div>
                         <div class="card-body">
-                            <h4 id="label_min" class="card-title text-center"></h4>
+                            <h4 id="label_min" class="card-title text-center">&#8203;</h4>
                         </div>
                     </div>
                 </div>
@@ -74,7 +70,7 @@
                     <div class="card mb-3 stat-card">
                         <div class="card-header bg-primary text-white">Nombre de valeur</div>
                         <div class="card-body">
-                            <h4 id="label_quantity" class="card-title text-center"></h4>
+                            <h4 id="label_quantity" class="card-title text-center">&#8203;</h4>
                         </div>
                     </div>
                 </div>
@@ -82,6 +78,7 @@
             </div>
         </div>
         <div class="flex-child2">
+            <button id="resetbtn" class="btn btn-info    bg-primary border-success"   >Reset Zoom</button>
             <div class="switchbuttons">
                 
             </div>
@@ -100,7 +97,7 @@
         <script src="JS_Externe\paho-mqtt.js" type="text/javascript"></script>
         <script src="JS_Externe\jspdf.min.js" type="text/javascript"></script>
         <script src="JS_Externe\chartjs-plugin-zoom.min.js" type="text/javascript"></script>
-        <script src="JS_Externe\hammer.min.js" type="text/javascript"></script>
+        
         <!-- JS_Interne-->
         <script src="JS_Interne\calcul.js" type="text/javascript"></script>
         <script src="JS_Interne\controler.js" type="text/javascript"></script>
