--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- CSS_Interne-->
         <link rel="stylesheet" href="CSS_Interne/style.css">
 </head>
-<body>
+<body id="slideSource">
     <nav class="navbar navbar-expand navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Graphique temps réel</a>
 
