ça marche enfaite

--- a/raspberry.html
+++ b/raspberry.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS_Interne/style.css">
 
 </head>
-    <body>
+    <body id='slideSource'>
         <nav class="navbar navbar-expand navbar-dark bg-primary">
             <a class="navbar-brand" href="#">Raspberry</a>
             <div id="navbarColor01">
@@ -25,6 +25,7 @@
         <div class="chart-raspberry">
             <canvas id="mainGraph"></canvas>
         </div>
+    <script src="JS_Externe\paho-mqtt.js" type="text/javascript"></script>
     <script src="JS_Externe\Chart.min.js" type="text/javascript"></script>
     <script src="JS_Interne\raspberry.js" type="text/javascript"></script>
     </body>
